@@ -16,6 +16,7 @@ Bugs fixed:
 - 2688353 Unnecessary condition in providerMgr.c
 - 2692030 sfcb's SLP client should use LocalConnect interface
 - 2141249 WQL parser needs to suppor the LIKE syntax
+- 2705902 Deallocating NULL response headers
 
 Changes in 1.3.3
 ================
